--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" ng-app="picclassApp">
+
 <head>
 <title>PicClass</title>
 
-
-
-<base href="/" />
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js""></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-route.min.js""></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-resource.min.js""></script>
-  <script src="../javascripts/picclassClient.js"></script>
-  <script src="../javascripts/angularPicclassApp.js"></script>
-  <!-- For use on Mobile devices -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> 
+<meta name="google-signin-client_id" content="100028386845-r7jqvmfpnc3m2rurn6664eoieardnv31.apps.googleusercontent.com">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="msapplication-TileColor" content="#FFFFFF">
+<meta name="msapplication-TileImage" content="../images/favicon/favicon-144.png">
+<meta name="msapplication-config" content="../images/favicon/browserconfig.xml">
 
 <link rel="shortcut icon" href="../images/favicon/favicon.ico">
 <link rel="icon" sizes="16x16 32x32 64x64" href="../images/favicon/favicon.ico">
@@ -31,68 +28,60 @@
 <link rel="apple-touch-icon" sizes="76x76" href="../images/favicon/favicon-76.png">
 <link rel="apple-touch-icon" sizes="152x152" href="../images/favicon/favicon-152.png">
 <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/favicon-180.png">
-<meta name="msapplication-TileColor" content="#FFFFFF">
-<meta name="msapplication-TileImage" content="../images/favicon/favicon-144.png">
-<meta name="msapplication-config" content="../images/favicon/browserconfig.xml">
-
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="../stylesheets/all.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="../stylesheets/prettyPhoto.css" media="screen" />
+
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-route.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-resource.min.js"></script>
+
+
+  <script src="../javascripts/picclassClient.js"></script>
+  <script src="../javascripts/angularPicclassApp.js"></script>
+
+
+  <script>
+    function signOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      auth2.signOut().then(function () {
+        console.log('User signed out.');
+    });
+  }
+  </script>
+
 </head>
 
 <body>
-<div id="wrapper">
+<div id="wrapper" ng-controller="MainCtrl as main">
   <div id="wrapper-top"> </div>
   <div id="left">
-    <h1 class="logo"><a href="index.html">PicClass</a></h1>
+    <h1 class="logo"><a href="/user/home">PicClass</a></h1>
     <ul class="menu">
-      <li><a href="index.html">Home</a></li>
-      <li> <a href="#">Upload pictures</a></li>
+      <li><a href="/user/home">Home</a></li>
+      <li> <a href="/user/upload">Upload pictures</a></li>
       <li> <a class="opened" href="#">Your albums</a>
         <ul class="sub-menu">
-          <li><a class="active" href="folder-test.html">Summer</a></li>
-        </ul>
-      </li>
-      <li><a href="login.html">Log out</a></li>
-    </ul>
-  </div>
-
-
-  <div id="right">
-    <ul class="thumbnails" ng-view>
-      <li><img src="../images/gallery/thumb1.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb2.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb3.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb4.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb5.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb6.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb7.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb8.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb9.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb10.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb11.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb12.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb13.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb14.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb15.jpg" alt="" width="150" height="121"/></li>
-      <li><img src="../images/gallery/thumb16.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb8.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb9.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb10.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb11.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb12.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb13.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb14.jpg" alt="" width="150" height="121" /></li>
-      <li><img src="../images/gallery/thumb15.jpg" alt="" width="150" height="121"/></li>
-      <li><img src="../images/gallery/thumb16.jpg" alt="" width="150" height="121" /></li>
+          <li ng-repeat="album in albums">
+            <a class="active" href="/user/album/{{album.id}}">{{album.title}}</a>
+          </li>
+        </li>
+      <li><a href="#" onclick="signOut();">Sign out</a></li>
 
     </ul>
   </div>
+
+
+  <div id="right" ng-view>
+
+    
+  </div>
+
   <div id="wrapper-bottom"> </div>
+
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://cloud.github.com/downloads/malsup/cycle/jquery.cycle.all.latest.js"></script>
-<script type="text/javascript" src="../js/jquery.prettyPhoto.js"></script>
-<script type="text/javascript" src="../js/main.js"></script>
+
 </body>
 </html>
