--- a/public/html/upload-angular.html
+++ b/public/html/upload-angular.html
@@ -1,7 +1,72 @@
+<!DOCTYPE html>
+<html id="ng-app" ng-app="picclassApp"> <!-- id="ng-app" IE<8 -->
 
-        <div class="container" nv-file-drop="" uploader="uploader" filters="queueLimit, customFilter">
+    <head>
+        <title>PicClass</title>
 
 
+
+<base href="/" />
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js""></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-route.min.js""></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-resource.min.js""></script>
+  <script src="../javascripts/picclassClient.js"></script>
+  <script src="../javascripts/angularPicclassApp.js"></script>
+  <!-- For use on Mobile devices -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="shortcut icon" href="../images/favicon/favicon.ico">
+<link rel="icon" sizes="16x16 32x32 64x64" href="../images/favicon/favicon.ico">
+<link rel="icon" type="image/png" sizes="196x196" href="../images/favicon/favicon-192.png">
+<link rel="icon" type="image/png" sizes="160x160" href="../images/favicon/favicon-160.png">
+<link rel="icon" type="image/png" sizes="96x96" href="../images/favicon/favicon-96.png">
+<link rel="icon" type="image/png" sizes="64x64" href="../images/favicon/favicon-64.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../images/favicon/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16.png">
+<link rel="apple-touch-icon" href="../images/favicon/favicon-57.png">
+<link rel="apple-touch-icon" sizes="114x114" href="../images/favicon/favicon-114.png">
+<link rel="apple-touch-icon" sizes="72x72" href="../images/favicon/favicon-72.png">
+<link rel="apple-touch-icon" sizes="144x144" href="../images/favicon/favicon-144.png">
+<link rel="apple-touch-icon" sizes="60x60" href="../images/favicon/favicon-60.png">
+<link rel="apple-touch-icon" sizes="120x120" href="../images/favicon/favicon-120.png">
+<link rel="apple-touch-icon" sizes="76x76" href="../images/favicon/favicon-76.png">
+<link rel="apple-touch-icon" sizes="152x152" href="../images/favicon/favicon-152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/favicon-180.png">
+<meta name="msapplication-TileColor" content="#FFFFFF">
+<meta name="msapplication-TileImage" content="../images/favicon/favicon-144.png">
+<meta name="msapplication-config" content="../images/favicon/browserconfig.xml">
+
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="../stylesheets/all.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../stylesheets/prettyPhoto.css" media="screen" />
+        
+
+        <!-- Fix for old browsers -->
+        <script src="http://nervgh.github.io/js/es5-shim.min.js"></script>
+        <script src="http://nervgh.github.io/js/es5-sham.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+        <script src="../console-sham.js"></script>
+
+        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+
+        <!--<script src="../bower_components/angular/angular.js"></script>-->
+        <script src="http://code.angularjs.org/1.2.0/angular.min.js"></script>
+        <script src="../../dist/angular-file-upload.min.js"></script>
+        <script src="controllers.js"></script>
+
+        <style>
+            .my-drop-zone { border: dotted 3px lightgray; }
+            .nv-file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
+            .another-file-over-class { border: dotted 3px green; }
+            html, body { height: 100%; }
+        </style>
+
+    </head>
+
+    <!-- 1. nv-file-drop="" uploader="{Object}" options="{Object}" filters="{String}" -->
+    <body ng-controller="AppController" nv-file-drop="" uploader="uploader" filters="queueLimit, customFilter">
+
+        <div class="container">
 
             <div class="row">
 
@@ -9,12 +74,12 @@
 
                     <h3>Select files</h3>
 
+                  
+
                     <!-- Example: nv-file-select="" uploader="{Object}" options="{Object}" filters="{String}" -->
                     Multiple
                     <input type="file" nv-file-select="" uploader="uploader" multiple  /><br/>
 
-                    Single
-                    <input type="file" nv-file-select="" uploader="uploader" />
                 </div>
 
                 <div class="col-md-9" style="margin-bottom: 40px">
@@ -84,3 +149,6 @@
             </div>
 
         </div>
+
+    </body>
+</html>
