--- a/public/html/login.html
+++ b/public/html/login.html
@@ -48,7 +48,7 @@
   <img class="login-logo" src="../images/PicClass.png"></img>
   
   <form class="login-form">
-  <button href="/auth/google">Login with Google</button>
+  <a href="http://localhost:4001/auth/google">Login with Google</a>
   </form>
   </div>
   </div>
