changed to public url

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -48,7 +48,7 @@
   <img class="login-logo" src="../images/PicClass.png"></img>
   
   <form class="login-form">
-  <a href="http://localhost:4001/auth/google">Login with Google</a>
+  <a href="http://https://api.eu.apiconnect.ibmcloud.com/dsftc-dev/sb/auth/google">Login with Google</a>
   </form>
   </div>
   </div>
