Updated url callback

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -48,7 +48,7 @@
   <img class="login-logo" src="../images/PicClass.png"></img>
   
   <form class="login-form">
-  <a href="http://https://api.eu.apiconnect.ibmcloud.com/dsftc-dev/sb/auth/google">Login with Google</a>
+  <a href="https://apiconnect-3ef45867-a1a4-4ef2-bc14-a33a9c2c6439.dsftc-dev.apic.eu-gb.mybluemix.net//auth/google">Login with Google</a>
   </form>
   </div>
   </div>
