Trying to upoad pictures

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -48,7 +48,8 @@
   <img class="login-logo" src="../images/PicClass.png"></img>
   
   <form class="login-form">
-  <a href="https://apiconnect-3ef45867-a1a4-4ef2-bc14-a33a9c2c6439.dsftc-dev.apic.eu-gb.mybluemix.net/auth/google">Login with Google</a>
+  <!-- https://apiconnect-3ef45867-a1a4-4ef2-bc14-a33a9c2c6439.dsftc-dev.apic.eu-gb.mybluemix.net/auth/google -->
+  <a href="http://localhost:4001/auth/google">Login with Google</a> 
   </form>
   </div>
   </div>
