--- a/public/html/index.html
+++ b/public/html/index.html
@@ -34,6 +34,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-route.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-resource.min.js"></script>
+  <script src="../javascripts/ng-file-upload-shim.min.js"></script>
+  <script src="../javascripts/ng-file-upload.min.js"></script>
+  <script src="../javascripts/ng-file-upload-all.min.js"></script>
+  <script src="../javascripts/FileAPI.min.js"></script>
 
 
   <script src="../javascripts/picclassClient.js"></script>
