Changed URL to public

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -49,7 +49,7 @@
   
   <form class="login-form">
   <!-- https://apiconnect-3ef45867-a1a4-4ef2-bc14-a33a9c2c6439.dsftc-dev.apic.eu-gb.mybluemix.net/auth/google -->
-  <a href="http://localhost:4001/auth/google">Login with Google</a> 
+  <a href="http://picclass-backend.eu-gb.mybluemix.net/auth/google">Login with Google</a> 
   </form>
   </div>
   </div>
