changed to https

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -60,7 +60,7 @@
             <a class="active" href="/user/{{album.userId}}/album/{{album.id}}">{{album.title}}</a>
           </li>
         </li>
-      <li><a href="http://picclass-backend.eu-gb.mybluemix.net/auth/logout" ">Sign out</a></li>
+      <li><a href="https://picclass-backend.eu-gb.mybluemix.net/auth/logout" ">Sign out</a></li>
 
     </ul>
   </div>
