--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" ng-app="picclassApp">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en" ng-app="picclassApp">
 
 <head>
 <title>PicClass</title>
@@ -74,8 +74,8 @@
   <div id="wrapper-bottom"> </div>
 
 </div>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
-<script type="text/javascript" src="http://cloud.github.com/downloads/malsup/cycle/jquery.cycle.all.latest.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://cloud.github.com/downloads/malsup/cycle/jquery.cycle.all.latest.js"></script>
 
 
 
